# VighnaMitraAi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.ipynb_checkpoints/: test-checkpoint.ipynb  test1-checkpoint.ipynb
data/: vighnamitraai.db  vighnamitraai.db-shm  vighnamitraai.db-wal
data/vectorstore/vivekvro/: index.faiss  index.pkl
src/: encrypt.py  routes.py  state.py  user_auth.py
src/LLMs/: load_llm.py
src/chatbots/: chatbot_graph1.py  chatbot_graphs.py  node_conditions.py  node_condtions.py  nodes.py
src/configs/: config_methods.py  mcpServers_config.json
src/rag/: DocumentsLoader.py  embeddings.py  retrievers.py
