[project]
name = "vighnamitraai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.3",
    "flask>=3.1.3",
    "grandalf>=0.8",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "password-validator>=1.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.0",
    "streamlit>=1.56.0",
    "torchvision>=0.26.0",
]
